# op-succinct-public

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  docker-compose.yml  minio_setup.sh  nats-server.conf
.cargo/: config.toml
.sqlx/: query-14df74a71d94eb96de9cc71584d9e95160ceabb5c5db7f079bb8f2607964f6f7.json  query-320ed3af0524d0134fad30aa182d25a832d811038803c2e908517b8a7c094215.json  query-33299ad4876820674996e4e738fd81487a9b5ca99dc004b015a305e7b1b77b7c.json  query-997351e6fc897faf929efd76f9a599232134aeb0bb4f709c46616ddd00191f2f.json  query-bce38ac11f8242575ef358fb1c0889502d1a17e9ef46707875c9095a750fc8a5.json  query-dba16a867c37ec2b49b6c1a9fd05f7498ffa31c7f845968b394dc917fb214e21.json  query-ed37a625d06bd671b6c20e54e920330bc56e3941a99de587c29ab82b9d6c83c3.json
elf/: aggregation-elf  aggregation-sindri.json  range-bump-sindri.json  range-embedded-sindri.json
programs/: README.md
programs/aggregation/src/: main.rs
programs/range/ethereum/: Cargo.toml
programs/range/ethereum/src/: main.rs
programs/range/utils/: Cargo.toml
programs/range/utils/src/: lib.rs
scripts/: update_db_roots.py
scripts/prove/: Cargo.toml
scripts/prove/src/: lib.rs
scripts/prove/tests/: cycle_count_diff.rs  multi.rs
scripts/utils/: Cargo.toml
slim-proposer/: Cargo.toml
slim-proposer/src/: env.rs  logger.rs  main.rs  slim_proposer.rs
slim-proposer/src/nats/: message_bus.rs  mod.rs
utils/client/: Cargo.toml
utils/client/src/: boot.rs  client.rs  types.rs
utils/client/src/oracle/: blob_provider.rs
utils/client/src/precompiles/: factory.rs  mod.rs
utils/client/src/witness/: executor.rs  mod.rs
utils/elfs/src/: lib.rs
utils/ethereum/client/: Cargo.toml
utils/ethereum/client/src/: executor.rs
utils/ethereum/host/: Cargo.toml
utils/ethereum/host/src/: host.rs
utils/host/: Cargo.toml
utils/host/src/: block_range.rs  contract.rs  fetcher.rs  host.rs  metrics.rs  stats.rs
utils/host/src/witness_generation/: online_blob_store.rs  preimage_witness_collector.rs  traits.rs
utils/proof/: Cargo.toml
utils/proof/src/: lib.rs
utils/signer/: Cargo.toml
utils/signer/src/: lib.rs
validity/: Cargo.toml  README.md
validity/.sqlx/: query-4fb4a722fb33c204028c8c52372044f0d2b9ca8c84132c4b71797eb9285a9448.json  query-67db6987c79406c206cf67879b178cf70dc144b8cafd16f8ceb5be6488ec340f.json  query-8aec148e9824b066412ba9644620113da65d90f09273742418abacf0d55fdcb4.json  query-99e1a56ec5cca311de1300eec77e0e17db74cdb1ade5656d81f921d819e40cbf.json  query-9f7b8fbcc84203ee8427b93609446b82744a4992bcdb3bcd9f970cfd12b4dc6e.json  query-b0320917b29c834a41359096bd4e53263eaad2ff20c130e2fd6599dc44836ffd.json  query-c9600f2e7f120ddd7a7b79612085f099bfc5d4cd09a5804334e464fb55229039.json  query-cdcd1743d5406ac2929b13f5e1157d764d0923a63f81c3e7657e2d504dcc9b8b.json  query-f9b058ec20eaa5e603d64f2af5344d13460d5b34d3181a9254b23b6c1f2560d4.json
validity/migrations/: 01_init.sql  04_execution_stats.sql  05_add_zircuit_client_schema.sql  06_add_timeout_column.sql
validity/src/: client_proxy.rs  config.rs  contract.rs  env.rs  lib.rs  logger.rs  proof_requester.rs  proposer.rs  slim_proposer.rs  types.rs  utils.rs
validity/src/db/: client.rs  mod.rs  tests.rs  types.rs
zircuit-client/: .env.example  Cargo.toml  migrations
zircuit-client/.sqlx/: query-214acfedeabce42f3a0f3ebf9bd0afa776d142fe5d9116da4654f5546455955a.json
zircuit-client/src/: client.rs  env.rs  lib.rs  logger.rs  test.rs
zircuit-client/src/db/: client.rs  types.rs
zircuit-client/src/message_bus/: basic.rs  mod.rs  nats.rs
zircuit-client/src/storage/: local.rs  mod.rs  s3.rs  tests.rs
