[workspace]
members = [
    "utils/client",
    "utils/host",
    "utils/build",
    "utils/proof",
    "utils/signer",
    "utils/ethereum/client",
    "utils/ethereum/host",
    "programs/range/*",
    "programs/aggregation",
    "scripts/prove",
    "scripts/utils",
    "validity",
    "zircuit-client",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["ratankaliani", "zachobront", "fakedev9999"]
homepage = "https://succinctlabs.github.io/op-succinct/"
repository = "https://github.com/succinctlabs/op-succinct"

[workspace.dependencies]
# general
anyhow = { version = "1.0.86", default-features = false }
aws-config = "1.6.3"
aws-sdk-s3 = "1.91.0"
cfg-if = "1.0.0"
spin = { version = "0.10.0" }
async-trait = "0.1.80"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
clap = "4.5.9"
cargo_metadata = "0.18.1"
dotenv = "0.15.0"
num-format = "0.4.4"
futures = "0.3.30"
serde_cbor = "0.11.2"
log = "0.4.22"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = [
    "json",
    "multipart",
    "stream",
    "zstd",
] }
reqwest-middleware = "0.4.1"
reqwest-retry = { version = "0.7.0", features = ["tracing"] }
csv = "1.3.0"
serde = { version = "=1.0.226", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
rkyv = { version = "0.8", features = ["hashbrown-0_15", "std"] }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.22.1"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
metrics-process = "2.4.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.10.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "chrono",
    "bigdecimal",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
uuid = { version = "1.17.0", features = ["v4"] }

# kona
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", features = [
    "rkyv",
    "serde",
] }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-client = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1" }
kona-rpc = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1", default-features = false }

# op-succinct
op-succinct-prove = { path = "scripts/prove" }
op-succinct-client-utils = { path = "utils/client" }
op-succinct-host-utils = { path = "utils/host" }
op-succinct-build-utils = { path = "utils/build" }
op-succinct-elfs = { path = "utils/elfs" }
op-succinct-validity = { path = "validity" }
op-succinct-fp = { path = "fault-proof" }
op-succinct-ethereum-client-utils = { path = "utils/ethereum/client" }
op-succinct-ethereum-host-utils = { path = "utils/ethereum/host" }
op-succinct-proof-utils = { path = "utils/proof" }
op-succinct-signer-utils = { path = "utils/signer" }
op-succinct-range-utils = { path = "programs/range/utils" }

zircuit-client = { path = "zircuit-client" }

# Alloy (Network)
alloy-signer-local = { version = "1.0.38", features = ["keystore"] }
alloy-provider = { version = "1.0.38" }
alloy-transport = { version = "1.0.38" }
alloy-transport-http = { version = "1.0.38" }
alloy-contract = { version = "1.0.38" }
alloy-network = { version = "1.0.38" }

# Alloy
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-eips = { version = "1.0.38", default-features = false }
alloy-serde = { version = "1.0.38", default-features = false }
alloy-consensus = { version = "1.0.38", default-features = false }
alloy-rpc-types = { version = "1.0.38", default-features = false }
alloy-rpc-client = { version = "1.0.38", default-features = false }
alloy-node-bindings = { version = "1.0.38", default-features = false }
alloy-rpc-types-engine = { version = "1.0.38", default-features = false }
alloy-rpc-types-beacon = { version = "1.0.38", default-features = false }
alloy-rpc-types-eth = { version = "1.0.38", default-features = false }
alloy-signer = { version = "1.0.38", default-features = false }

# Keccak with the SHA3 patch is more efficient than the default Keccak.
alloy-primitives = { version = "1.3.1", default-features = false, features = [
    "sha3-keccak",
] }
alloy-sol-types = { version = "1.3.1", default-features = false }
alloy-sol-macro = { version = "1.3.1", default-features = false }

# OP Alloy
op-alloy-consensus = { version = "0.20.0", default-features = false }
op-alloy-rpc-types = { version = "0.20.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.20.0", default-features = false }
op-alloy-network = { version = "0.20.0", default-features = false }

# Execution
alloy-evm = { version = "0.21.0", default-features = false }
alloy-op-evm = { version = "0.21.0", default-features = false }
# Use kzg-rs and substrate-bn for the zkVM.
revm = { version = "29.0.0", default-features = false, features = [
    "kzg-rs",
    "bn",
] }
revm-precompile = { version = "27.0.0", default-features = false }
op-revm = { version = "10.1.0", default-features = false }

# SP1
sp1-sdk = { version = "=5.0.1" }
sp1-lib = { version = "=5.0.0", features = ["verify"] }
sp1-zkvm = { version = "=5.0.0", features = ["verify"] }
sp1-build = { version = "=5.0.0" }

# kzg
kzg-rs = { version = "0.2.6", features = ["rkyv", "serde"] }
c-kzg = { version = "2.0.0", default-features = false }

# Sindri
sindri = { version = "0.3.1", features = ["sp1-v5"] }

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }

[patch."https://github.com/op-rs/kona.git"]
kona-preimage = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-mpt = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-derive = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-driver = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-executor = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-proof = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-client = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-host = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-providers-alloy = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-rpc = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-protocol = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-registry = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-genesis = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-cli = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-std-fpvm = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
kona-std-fpvm-proc = { git = "https://github.com/zircuit-labs/zr-kona-public", tag = "v1.7.0" }
