[package]
name = "slim-proposer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true


[dependencies]
# workspace
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
hex.workspace = true

op-succinct-host-utils.workspace = true
op-succinct-signer-utils.workspace = true

alloy-eips.workspace = true
alloy-provider = { workspace = true }
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

async-trait.workspace = true
futures.workspace = true
bytes = "1.7.2"
async-nats = "0.45.0"

rustls = "0.23.23"

[features]
echo = []
