[package]
name = "op-succinct-validity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "validity"
path = "bin/validity.rs"

[[bin]]
name = "slim-proposer"
path = "bin/slim_proposer.rs"

[dependencies]

# workspace
tokio.workspace = true
alloy-primitives.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# local
op-succinct-client-utils.workspace = true
op-succinct-elfs.workspace = true
op-succinct-host-utils.workspace = true
op-succinct-proof-utils.workspace = true
op-succinct-signer-utils.workspace = true

# sindri
sindri.workspace = true

zircuit-client.workspace = true

# sp1
sp1-sdk.workspace = true

# alloy
alloy-eips.workspace = true
alloy-provider = { workspace = true }
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-eth.workspace = true

anyhow.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

# server
bincode.workspace = true
base64.workspace = true
hex.workspace = true
sqlx.workspace = true
serde_repr = "0.1.19"
chrono = "0.4.39"
futures-util = "0.3.31"
clap.workspace = true
num-traits = "0.2.19"
tikv-jemallocator = "0.6.0"
rustls = "0.23.23"
rmp-serde = "1.3.0"
thiserror = "1.0.60"
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
uuid.workspace = true

[build-dependencies]
op-succinct-build-utils.workspace = true

[features]
default = ["ethereum"]
ethereum = ["op-succinct-proof-utils/ethereum"]
echo = []
