[package]
name = "zircuit-client"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1.10.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
async-trait.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
async-nats = "0.42.0"
futures = "0.3.31"
strum = { workspace = true, features = ["derive"]}

[dev-dependencies]
tempfile.workspace = true
ctor = "0.4.2"
