[package]
name = "op-succinct-proof-utils"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]

# local
op-succinct-elfs.workspace = true
op-succinct-ethereum-host-utils = { workspace = true, optional = true }
op-succinct-host-utils.workspace = true

# general
tracing.workspace = true

[features]
default = ["ethereum"]
ethereum = ["op-succinct-ethereum-host-utils"]
